<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pushup_tracker"
    tools:context=".PushUpTrackerActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/pushup_schedule_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/pushup_set_data" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/pushup_test_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/sixteen"
        android:text="@string/training"
        android:contentDescription="@string/training"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/thirty_two_sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.CardView
        android:id="@+id/countDisplayButton"
        android:layout_width="@dimen/two_hundered"
        android:layout_height="@dimen/two_hundered"
        android:layout_marginBottom="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="@dimen/hundred"
        app:layout_constraintBottom_toTopOf="@+id/restText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pushup_test_title">

        <TextView
            android:id="@+id/countDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zero"
            android:contentDescription="@string/zero"
            android:textColor="@color/white"
            android:textSize="@dimen/ninety_sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/restText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/thirty_six"
        android:layout_marginEnd="@dimen/sixteen"
        android:layout_marginStart="@dimen/sixteen"
        android:gravity="center"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen"
        android:text="@string/please_rest"
        android:contentDescription="@string/please_rest"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_sp"
        android:visibility="invisible"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/continuebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sixteen"
        android:layout_marginEnd="@dimen/eight"
        android:id="@+id/continuebtn"
        android:layout_marginStart="@dimen/eight"
        android:backgroundTint="@color/colorGreen"
        android:elevation="@dimen/four"
        app:cardCornerRadius="@dimen/sixteen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/eight"
            android:id="@+id/complete_button_text"
            android:text="@string/complete_activity"
            android:contentDescription="@string/complete_activity"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/finishWorkout"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:backgroundTint="@color/colorYellow"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:visibility="gone"
        android:elevation="@dimen/four"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pushup_schedule_layout" />
</android.support.constraint.ConstraintLayout>